# react-tauri

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Titlebar.jsx
src/pages/: helloworld.jsx  page1.jsx  page2.jsx  page3.jsx  page4.jsx
